--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,7 +6,7 @@
         <div class="reviews-photo">
           <img
             class="time-img"
-            src="../img/reviews/Ellipse22.png"
+            src="../img/reviewsim/Ellipse22.png"
             alt="john-wax"
             width="56"
             height="56"
@@ -23,7 +23,7 @@
         <div class="reviews-photo">
           <img
             class="time-img"
-            src="/img/reviews/Ellipse21.png"
+            src="/img/reviewsim/Ellipse21.png"
             alt="victoria-romashenko"
             width="56"
             height="56"
@@ -40,7 +40,7 @@
         <div class="reviews-photo">
           <img
             class="time-img"
-            src="/img/reviews/Ellipse21.png"
+            src="/img/reviewsim/Ellipse21.png"
             alt="anastasia-trachuk"
             width="56"
             height="56"
