--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,7 +6,7 @@
         <div class="reviews-photo">
           <img
             class="time-img"
-            src="../img/reviewsim/Ellipse22.png"
+            src="/img/reviewsim/Ellipse22.png"
             alt="john-wax"
             width="56"
             height="56"
